cambios en newproyec

--- a/index.html
+++ b/index.html
@@ -136,6 +136,6 @@
   
     <div class="contacto">
       <p>&copy; 2023 Buscador de Vuelos Mendel Perú</p>
-      <p>Número de Whatsapp: 994679560 - 928658556 - 991093018</p> 
+      <p>Whatsapp: 994679560 - 928658556 - 991093018</p> 
     </div>
   </footer>
