cambio2 en newproyec

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script>
         $(document).ready(function() {
             $('#fecha_ida, #fecha_vuelta').datepicker({
-                format: 'yyyy-mm-dd', // Puedes cambiar el formato de la fecha si lo necesitas
+                format: 'dd-mm-yyyy', // Puedes cambiar el formato de la fecha si lo necesitas
                 autoclose: true
             });
         });
