--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </ul>
         </div>
     </nav>
-<!-- Tu contenido aquí -->
+<!-- Tu contenido aquí si ya lo puse-->
 <h2><center><strong>Cotice su vuelo</strong></center></h2>
 <form action="/submit_flight_info" method="post" class="formulario" onsubmit="enviarWhatsApp(event); return false;">
     <div class="fila">
