--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         });
     </script>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
-
+    <link rel="icon" href="/images/logocircular.png" type="image/png" id="logoEnPestana">
     <script src="/js/script.js"></script>
 </head>
 <body class="indexvuelos">
