cambie mi numero

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
         <img src="/images/whatsapp.png" alt="WhatsApp">
       </a>
     </div>
-  
+
     <div class="contacto">
       <p>&copy; 2023 Buscador de Vuelos Mendel Perú</p>
-      <p>Whatsapp: 994679560 - 928658556 - 991093018</p> 
+      <p>Whatsapp: 994679560 - 991093018</p> 
     </div>
   </footer>
